<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".gatepass.FclTruckEntryActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:hint="@string/container_number"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etContainerNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="11"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvTruckNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginLeft="2dp"
                android:text="@string/truck_no" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="0.35"
                    android:gravity="center"
                    android:hint="City/Metropolitan"
                    android:textColor="@android:color/black">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/etCityMetropolitan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:lines="1"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:hint="Category"
                    android:textColor="@android:color/black">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/etVCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="0.35"
                    android:gravity="center"
                    android:hint="Number"
                    android:textColor="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTruckNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:textSize="20dp"
                        android:textStyle="bold"

                        android:textColor="@android:color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:hint="@string/driver_card_no"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etDriverCardNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:hint="@string/driver_mobile_no"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDriverMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:hint="Helper Card No"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHelperCardNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@android:color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvTimeSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginLeft="2dp"
                android:text="@string/time_slot" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/timeSlotradioGroup" >

                <RadioButton
                    android:id="@+id/radioSlot1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="10dp"
                    android:checked="true"
                    android:text="Slot 1 (08 AM to 4PM)"
                    android:textSize="25dp" />

                <RadioButton
                    android:id="@+id/radioSlot2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="2dp"
                    android:text="Slot2 (04 PM to 12AM)"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:textSize="25dp"/>
                <RadioButton
                    android:id="@+id/radioSlot3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="30dp"
                    android:text="Slot3 (12 AM to 08AM)"
                    android:textSize="25dp"/>
            </RadioGroup>


            <Button
                android:id="@+id/btnNextFCL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="20dp"
                android:onClick="btnNext"
                android:text="  Next>"
                tools:ignore="OnClick" />
        </LinearLayout>



    </ScrollView>


</LinearLayout>
